<resources>
    <string name="app_name">YouFilms</string>
    <string name="title_activity_detail_film">Detail</string>
    <string name="img_poster_desc">Film Poster</string>
    <string name="txt_descTitle">Description</string>
    <string name="share"> Saya Merekomendasikan %1$s, Info Lebih Lanjut: %2$s</string>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="btn_favorite">Favorite</string>
</resources>